--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PREFIX=-                                                            # Put anything except @ (Ex: !, -, +, :, .  etc.).
-MODS=918101187835,923045204414                                      # Put any phone number without + , () and spaces.
-MONGODB=mongodb+srv://...put your MongoDB URL                       # Put your own MongoDB url, we will not provide you any public MongoDB url for stability.
-SESSION_ID=put any random string                                    # Put any random value and keep it copied.
+MODS=916000570671 , 918472075432                                      # Put any phone number without + , () and spaces.
+MONGODB=mongodb+srv://ashish:ashish@cluster0.2pxqhuu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0                      # Put your own MongoDB url, we will not provide you any public MongoDB url for stability.
+SESSION_ID=stkrootecdcyberprunk                                    # Put any random value and keep it copied.
 OPENAI_API=sk-...put your OpenAI API key                            # Put your own OpenAI API key.
 TENOR_API_KEY=AIzaSyCyouca1_KKy4W_MG1xsPzuku5oa8W358c               # Put your Tenor API key if you want.
 PACKNAME=Atlas Bot                                                  # Put any sticker packname you want.
